<resources>
    <string name="app_name">AppMovilElPunto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categorias">Categorías</string>
    <string name="menu_pedidos">Mis pedidos</string>
    <string name="menu_perfil">Mi perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtBtnIngresar">Ingresar</string>
    <string name="txtBtnRegistro">Registrarse</string>
    <string name="txtHintEmail">Ingrese su correo:</string>
    <string name="txtHintPassowrd">Ingrese su contraseña:</string>
    <string name="txtBtnEditar">Editar perfil</string>
    <string name="txtBtnEliminarUsuario">Eliminar Usuario</string>
    <string name="next"><![CDATA[>]]></string>
    <string name="txtCat">Categoria</string>
    <string name="txtTvRegistro">Registro de Cliente</string>
    <string name="txtHintRegNombre">Nombres:</string>
    <string name="txtHintRegApellido">Apellidos:</string>
    <string name="txtHintRegEmail">Email:</string>
    <string name="txtHintRegPassword">Contraseña:</string>
    <string name="txtHintRegTelefono">Telefono:</string>
    <string name="txtHintRegDni">DNI:</string>
    <string name="txtBtnRegistrarse">Registrarme</string>
    <string name="txtDetallePedidoVentaInfo">Puedes ver el detalle de tu pedido solo tocandolo:</string>
    <string name="txtTituloFotoPerfil">Por último, ingrese una foto de perfil</string>
    <string name="txtBtnElegirImagen">Elegir foto</string>
    <string name="txtBtnSubirImagen">Subir foto</string>
    <string name="txtBtnAgregarCarrito">Agregar</string>
    <string name="HintSvProductos">Busque un producto</string>
    <string name="txtBtnOmitirPorAhoraFoto">Omitir por ahora</string>
    <string name="txtBtnAgregarCarritoDetalle">Agregar al carrito</string>
    <string name="txtHomeOfertas">Puedes elegir entre nuestras ofertas:</string>
</resources>