<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:fontFamily="@font/montserrat_regular"
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/categoriasFragment"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_baseline_menu_open_24"
            android:title="@string/menu_categorias" />
        <item
            android:id="@+id/pedidosFragment"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_baseline_shopping_basket_24"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/perfilFragment"
            android:fontFamily="@font/montserrat_regular"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_perfil" />
    </group>
</menu>