<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.elpunto.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/categoriasFragment"
        android:name="com.elpunto.app.ui.categorias.CategoriasFragment"
        android:label="@string/menu_categorias"
        tools:layout="@layout/fragment_categorias" />
    <fragment
        android:id="@+id/pedidosFragment"
        android:name="com.elpunto.app.ui.pedidos.PedidosFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_pedidos" />
    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.elpunto.app.ui.miperfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/productosFragment"
        android:name="com.elpunto.app.ui.productos.ProductosFragment"
        android:label="fragment_productos"
        tools:layout="@layout/fragment_productos" />

</navigation>